src/objects/Partnership_Fee_Tracking_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Financial__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Actual Financial</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipLabel>Partnership Fee Tracking Items</relationshipLabel>
        <relationshipName>Partnership_Fee_Tracking_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beginning_Balance__c</fullName>
        <label>Beginning Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposited__c</fullName>
        <label>Deposited</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ending_Balance__c</fullName>
        <label>Ending Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Sub_Type__c</fullName>
        <label>Fee Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special GP</fullName>
                </value>
                <value>
                    <fullName>Special LP</fullName>
                </value>
                <value>
                    <fullName>Co-GP</fullName>
                </value>
                <value>
                    <fullName>Administrative GP</fullName>
                </value>
                <value>
                    <fullName>Administrative LP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Partner Asset Management Fee</fullName>
                </value>
                <value>
                    <fullName>Limited Partner Asset Management Fee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Note__c</fullName>
        <label>Other Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Withdrawal__c</fullName>
        <label>Withdrawal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Partnership Fee Tracking Item</label>
    <nameField>
        <displayFormat>PFT-{0}</displayFormat>
        <label>Partnership Fee Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Fee Tracking Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>